[친구 삭제 기능 완료]+[마이페이지 프로필사진 DB연동]+[채팅창 로딩바]+[채팅 이미지 줌인 애니메이션 적용]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">TaewanMessenger</string>
     <string name="title_activity_my_page">MyPageActivity</string>
+    <!--페이스북 로그인용 2개-->
+    <string name="facebook_app_id">484383088965391</string>
+    <string name="fb_login_protocol_scheme">fb484383088965391</string>
+
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
